--- a/portfolio/portfolio_app/static/portfolio_app/output.css
+++ b/portfolio/portfolio_app/static/portfolio_app/output.css
@@ -929,8 +929,6 @@ html, dialog {
   animation: higher .5s .5s;
 }
 
-/*todo: write some actual tailwind instead of putting it into half-arsed BEM */
-
 .project-visual:hover > .project-visual-img {
   animation: scrolling 6s alternate infinite ease-in-out;
 }
@@ -995,7 +993,7 @@ html, dialog {
 
   .carousel {
     width: 18rem;
-    height: 12rem;
+    height: 18rem;
     position: absolute;
     transform-style: preserve-3d;
     transform: rotateX(-12deg);
@@ -1003,7 +1001,7 @@ html, dialog {
 
   .carousel_cell {
     position: absolute;
-    width: 22rem;
+    width: 25.5vw;
     height: 18rem;
     right: 0%;
     top: 0%;
@@ -1099,12 +1097,12 @@ html, dialog {
   top: 0px;
 }
 
-.top-4 {
-  top: 1rem;
+.top-1\/3 {
+  top: 33.333333%;
 }
 
-.top-60 {
-  top: 15rem;
+.top-4 {
+  top: 1rem;
 }
 
 .z-10 {
@@ -1220,6 +1218,10 @@ html, dialog {
   margin-top: 2rem;
 }
 
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .block {
   display: block;
 }
@@ -1318,10 +1320,6 @@ html, dialog {
   width: 100vw;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
 .min-w-fit {
   min-width: -moz-fit-content;
   min-width: fit-content;
@@ -1353,6 +1351,10 @@ html, dialog {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-end {
@@ -1407,6 +1409,10 @@ html, dialog {
   overflow: clip;
 }
 
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1424,6 +1430,10 @@ html, dialog {
   border-bottom-left-radius: 0.375rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -1433,10 +1443,6 @@ html, dialog {
 }
 
 .border-\[1px\] {
-  border-width: 1px;
-}
-
-.border {
   border-width: 1px;
 }
 
@@ -1639,6 +1645,10 @@ html, dialog {
   padding-bottom: 1.5rem;
 }
 
+.pt-12 {
+  padding-top: 3rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1751,14 +1761,6 @@ html, dialog {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .\[\&\>li\]\:navbar-item>li {
   width: 80%;
   border-radius: 0.5rem;
@@ -1788,27 +1790,6 @@ html, dialog {
 
 .hover\:w-16:hover {
   width: 4rem;
-}
-
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.hover\:animate-ping:hover {
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-.hover\:animate-pulse:hover {
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .hover\:cursor-help:hover {
@@ -1988,6 +1969,10 @@ html, dialog {
     padding-bottom: 0px;
   }
 
+  .md\:pt-12 {
+    padding-top: 3rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2051,12 +2036,12 @@ html, dialog {
     grid-row-start: 2;
   }
 
-  .lg\:mt-8 {
-    margin-top: 2rem;
-  }
-
   .lg\:mb-4 {
     margin-bottom: 1rem;
+  }
+
+  .lg\:mt-8 {
+    margin-top: 2rem;
   }
 
   .lg\:block {
@@ -2089,10 +2074,6 @@ html, dialog {
 
   .lg\:w-24 {
     width: 6rem;
-  }
-
-  .lg\:w-2\/3 {
-    width: 66.666667%;
   }
 
   .lg\:w-4\/5 {
@@ -2129,16 +2110,14 @@ html, dialog {
     margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
   }
 
-  .lg\:space-y-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-y-reverse: 0;
-    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-  }
-
   .lg\:space-y-12 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(3rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:whitespace-nowrap {
+    white-space: nowrap;
   }
 
   .lg\:pt-8 {
@@ -2149,27 +2128,15 @@ html, dialog {
     font-size: 1.875rem;
     line-height: 2.25rem;
   }
+}
 
-  .lg\:odd\:bg-red-600:nth-child(odd) {
-    --tw-bg-opacity: 1;
-    background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-  }
-
-  .lg\:even\:ml-12:nth-child(even) {
-    margin-left: 3rem;
-  }
-
-  .lg\:even\:bg-red-600:nth-child(even) {
-    --tw-bg-opacity: 1;
-    background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+@media (min-width: 1280px) {
+  .xl\:pt-0 {
+    padding-top: 0px;
   }
 }
 
 @media (min-width: 1536px) {
-  .\32xl\:-mt-24 {
-    margin-top: -6rem;
-  }
-
   .\32xl\:mb-6 {
     margin-bottom: 1.5rem;
   }
@@ -2214,14 +2181,14 @@ html, dialog {
     padding-top: 6rem;
   }
 
+  .\32xl\:pt-0 {
+    padding-top: 0px;
+  }
+
   .\32xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
-}
-
-.\[\&\>a\]\:text-action>a {
-  color: hsl(var(--action));
 }
 
 .\[\&\>a\]\:text-accent>a {
